--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <title>UnSplash React-GrapghQL App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
